# AutoDocGen

./: .gitignore  GIT_INSTRUCTIONS.md  PROJECT_OUTLINE.md  README.md  REMOTE_LLM_SETUP.md  SESSION_REPORT.md  debug_clang.py  debug_llm_gen.py  pyproject.toml  test_ollama.py  test_parser_fallback.py
docs_graphics_lib/: autodocgen.config.json  index.md
docs_graphics_lib/diagrams/: codebase_overview.md
docs_graphics_lib/include/: BufferCache.md  BufferMapper.md  BufferPool.md  BufferTypes.md  CameraBufferManager.md  FenceManager.md  GrallocAllocator.md  GraphicBuffer.md  GraphicsBuffer.md  IBufferAllocator.md
docs_graphics_lib/src/: BufferPool.md  CameraBufferManager.md  GrallocAllocator.md  GraphicBuffer.md
docs_myproject_gStreamer/: autodocgen.config.json
docs_test_graph/: SampleService.md  autodocgen.config.json  index.md
src/autodocgen/: __init__.py  analyzer.py  config.py  main.py  watcher.py
src/autodocgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/autodocgen/chunker/: __init__.py  context_builder.py  intelligent_chunker.py  models.py
src/autodocgen/generator/: __init__.py  diagram_generator.py  doc_generator.py
src/autodocgen/graph/: __init__.py  extractor.py  models.py  store.py  visualizer.py
src/autodocgen/llm/: __init__.py  ollama_client.py  prompts.py
src/autodocgen/parser/: __init__.py  cpp_parser.py  models.py
src/autodocgen/storage/: __init__.py  (+1 more)
tests/rtos_lib/: MicroKernel.cpp  MicroKernel.md  autodocgen.config.json  index.md
tests/sample_code/: SampleService.cpp  SampleService.h
(+20 files in other folders)
